--- a/BSKCrypto.csproj
+++ b/BSKCrypto.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="algorithms\MacierzoweB.cs" />
+    <Compile Include="algorithms\Vigenere.cs" />
     <Compile Include="EncryptingBlocks.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -52,6 +53,7 @@
       <DependentUpon>EncryptingBlocks.cs</DependentUpon>
     </Compile>
     <Compile Include="algorithms\MacierzoweA.cs" />
+    <Compile Include="FormInterface.cs" />
     <Compile Include="MacierzoweAForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,6 +81,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="algorithms\RailFence.cs" />
+    <Compile Include="VigenereForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VigenereForm.Designer.cs">
+      <DependentUpon>VigenereForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="EncryptingBlocks.resx">
       <DependentUpon>EncryptingBlocks.cs</DependentUpon>
     </EmbeddedResource>
@@ -104,6 +112,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="VigenereForm.resx">
+      <DependentUpon>VigenereForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
