--- a/BSKCrypto.csproj
+++ b/BSKCrypto.csproj
@@ -55,6 +55,7 @@
     </Compile>
     <Compile Include="algorithms\CezaraA.cs" />
     <Compile Include="algorithms\CezaraB.cs" />
+    <Compile Include="algorithms\DES.cs" />
     <Compile Include="algorithms\MacierzoweB.cs" />
     <Compile Include="algorithms\MacierzoweC.cs" />
     <Compile Include="algorithms\Vigenere.cs" />
@@ -69,6 +70,12 @@
     </Compile>
     <Compile Include="CezarBForm.Designer.cs">
       <DependentUpon>CezarBForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DESForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DESForm.Designer.cs">
+      <DependentUpon>DESForm.cs</DependentUpon>
     </Compile>
     <Compile Include="EncryptingBlocks.cs">
       <SubType>Form</SubType>
@@ -138,6 +145,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CezarBForm.resx">
       <DependentUpon>CezarBForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DESForm.resx">
+      <DependentUpon>DESForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EncryptingBlocks.resx">
       <DependentUpon>EncryptingBlocks.cs</DependentUpon>
